overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Noto Sans', sans-serif;
     line-height: 1.8;
     color: #888888;
+    overflow-x: hidden;
 }
 
 .nopadding {
